docs(ui): regenerate english screenshots, add animated demo gif and consolidate images